--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -1,44 +1,1 @@
-/*!
- * Bootstrap v4.3.0 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
-@import "bootstrap4.3/functions";
-@import "bootstrap4.3/variables";
-@import "bootstrap4.3/mixins";
-@import "bootstrap4.3/root";
-@import "bootstrap4.3/reboot";
-@import "bootstrap4.3/type";
-@import "bootstrap4.3/images";
-@import "bootstrap4.3/code";
-@import "bootstrap4.3/grid";
-@import "bootstrap4.3/tables";
-@import "bootstrap4.3/forms";
-@import "bootstrap4.3/buttons";
-@import "bootstrap4.3/transitions";
-@import "bootstrap4.3/dropdown";
-@import "bootstrap4.3/button-group";
-@import "bootstrap4.3/input-group";
-@import "bootstrap4.3/custom-forms";
-@import "bootstrap4.3/nav";
-@import "bootstrap4.3/navbar";
-@import "bootstrap4.3/card";
-@import "bootstrap4.3/breadcrumb";
-@import "bootstrap4.3/pagination";
-@import "bootstrap4.3/badge";
-@import "bootstrap4.3/jumbotron";
-@import "bootstrap4.3/alert";
-@import "bootstrap4.3/progress";
-@import "bootstrap4.3/media";
-@import "bootstrap4.3/list-group";
-@import "bootstrap4.3/close";
-@import "bootstrap4.3/toasts";
-@import "bootstrap4.3/modal";
-@import "bootstrap4.3/tooltip";
-@import "bootstrap4.3/popover";
-@import "bootstrap4.3/carousel";
-@import "bootstrap4.3/spinners";
-@import "bootstrap4.3/utilities";
-@import "bootstrap4.3/print";
+@import "bootstrap4.3/bootstrap";
