--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,9 @@
+/*
 ---
-# this ensures Jekyll reads the file to be transformed into CSS later
-# only Main files contain this front matter, not partials.
 ---
 
 @import 'variables';
 @import 'bootstrap';
 @import 'custom-components';
+
+*/
