Zmieniono nazwę i opis głóego pliku dla Space

--- a/_sass/space1.2-template.scss
+++ b/_sass/space1.2-template.scss
@@ -18,5 +18,7 @@
 
   4) uncomment body of the scss file: /assets/css/space-theme12.scss
 
+  5) Template /assets/img/ to  project /assets/img/
+
 */
 @import "space1.2/theme";
