Poprawiono demo i uzupełniono opis

--- a/_sass/space1.2-template.scss
+++ b/_sass/space1.2-template.scss
@@ -18,7 +18,9 @@
 
   4) uncomment body of the scss file: /assets/css/space-theme12.scss
 
-  5) Template /assets/img/ to  project /assets/img/
+  5) copy assets files
+     * template /assets/img/ to  project /assets/img/
+     * template /assets/svg/ to  project /assets/svg/
 
 */
 @import "space1.2/theme";
