Dodano bsc-offerings.html

--- a/_includes/html-head-space.html
+++ b/_includes/html-head-space.html
@@ -8,3 +8,4 @@
  -->
 <!-- CSS Space Template -->
 <link rel="stylesheet" href="/assets/css/space-theme12.css">
+<link rel="stylesheet" href="/assets/css/bsc-custom.css">
