:hammer: poprawiono strukturę stylów

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,4 @@
-/*
----
----
+// ---
+// ---
 
-@import 'variables';
-@import 'bootstrap';
-@import 'custom-components';
-
-*/
+@import 'main-style';
