--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -3,4 +3,5 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>{{page.title}}</title>
 
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 <link rel="stylesheet" href="/assets/css/main.css">
