--- a/_sass/_bootstrap-customize.scss
+++ b/_sass/_bootstrap-customize.scss
@@ -18,3 +18,4 @@ $warning: #f97f15;  // Ecstasy
 $danger: #f44336;  // Pomegranate
 
 $breadcrumb-divider: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI4IiBoZWlnaHQ9IjgiPjxwYXRoIGQ9Ik0yLjUgMEwxIDEuNSAzLjUgNCAxIDYuNSAyLjUgOGw0LTQtNC00eiIgZmlsbD0iY3VycmVudENvbG9yIi8+PC9zdmc+);
+$font-family-sans-serif: Roboto;
