Poprawiono stopkę. Zintegrowano ze stroną offerings. Konwersja na boostrap

--- a/_sass/_bootstrap-customize.scss
+++ b/_sass/_bootstrap-customize.scss
@@ -8,8 +8,8 @@ $warning: #faa11d;  // Tree Poppy
 $danger: #f44336;  // Pomegranate
 */
 
-$body-bg: #e5d8f9;
-$body-color: #4a5100;
+// $body-bg: #e5d8f9;
+// $body-color: #4a5100;
 
 $primary: #4264d0;
 $info: #293234;  // Outer Space
