Dodano ćwiczenie dla closures

--- a/_layouts/javascript-playground.html
+++ b/_layouts/javascript-playground.html
@@ -6,10 +6,50 @@
 	<title>{{page.title}}</title>
 	<style>
 		body {
+			font-size: 1.1em;
+		}
+		.example {
+			border: 2px solid darkslategray;
+			margin: 0.3em;
+			border-radius: 0.5em;
+			overflow: hidden;
+		}
+		.example h1 {
+			margin: 0;
+			font-size: 1.3em;
+			padding: 0.4em 1em;
+			background-color: rgb(0, 127, 169);
+			color: aliceblue;
+		}
+		.example-content {
+			margin: 0;
+			border-left: 15px solid deepskyblue;
+			padding-bottom: 0.5em;
+		}
+		.example p {
+			margin: 0.4em 1em;
+			padding: 0;
+		}
+		.example form {
+		}
+		.example .reference {
+			margin: 0px;
+			padding: 0.5em 1em;
+			background-color: antiquewhite;
+			border-bottom: 1px solid rgb(0, 74, 165);
+		}
+
+
+		/* --- Dark theme --- */
+		/*
+		body {
 			background-color: #102020;
 			color: #f8ffff;
-			font-size: 1.2em;
 		}
+		a {
+			color: yellow;
+		}
+		*/
 	</style>
 </head>
 <body>
